{
  "version": 4,
  "terraform_version": "0.12.11",
  "serial": 87,
  "lineage": "61213ce8-fca5-8e8a-d6de-c6c8e337357c",
  "resources": [
    {
      "module": "module.Hub-Az-FW01",
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "AppRuleSet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": []
    },
    {
      "module": "module.Hub-Az-FW01",
      "mode": "managed",
      "type": "azurerm_firewall_nat_rule_collection",
      "name": "NATRuleSet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": []
    },
    {
      "module": "module.Hub-Az-FW01",
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "NetworkRuleSet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": []
    },
    {
      "module": "module.Hub-ExtWAF-NSG",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-ExtWAF-NSG",
            "location": "southeastasia",
            "name": "Hub-ExtWAF-NSG",
            "resource_group_name": "Hub-Network-RG",
            "security_rule": [],
            "tags": {}
          }
        }
      ]
    },
    {
      "module": "module.Hub-Net01-NSG",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-Net01-NSG",
            "location": "southeastasia",
            "name": "Hub-Net01-NSG",
            "resource_group_name": "Hub-Network-RG",
            "security_rule": [],
            "tags": {}
          }
        }
      ]
    },
    {
      "module": "module.Hub-IntWAF-NSG",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-IntWAF-NSG",
            "location": "southeastasia",
            "name": "Hub-IntWAF-NSG",
            "resource_group_name": "Hub-Network-RG",
            "security_rule": [],
            "tags": {}
          }
        }
      ]
    },
    {
      "module": "module.Hub-ExtWAF-NSG",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgRuleSet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": []
    },
    {
      "module": "module.Hub-Net01-NSG",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgRuleSet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": []
    },
    {
      "module": "module.Hub-IntWAF-NSG",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgRuleSet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": []
    },
    {
      "module": "module.Hub-Az-FW01",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fw_pip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/publicIPAddresses/Hub-Az-FW01-PIP01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.139.251.52",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "Hub-Az-FW01-PIP01",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "Hub-Network-RG",
            "sku": "Standard"
          }
        }
      ]
    },
    {
      "module": "module.Hub-ER-GW01",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "gwpip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/publicIPAddresses/Hub-ER-GW01-PIP01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.139.236.161",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "Hub-ER-GW01-PIP01",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "Hub-Network-RG",
            "sku": "Standard"
          }
        }
      ]
    },
    {
      "module": "module.Prod-Hub",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.3.0.224/27",
            "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "Hub-Network-RG",
            "virtual_network_name": "Hub-VNet"
          },
          "depends_on": [
            "azurerm_resource_group.rgroup",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.3.0.0/26",
            "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/AzureFirewallSubnet",
            "ip_configurations": [
              "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/azureFirewalls/Hub-Az-FW01/azureFirewallIpConfigurations/Hub-Az-FW01-PIP01-Config"
            ],
            "name": "AzureFirewallSubnet",
            "resource_group_name": "Hub-Network-RG",
            "virtual_network_name": "Hub-VNet"
          },
          "depends_on": [
            "azurerm_resource_group.rgroup",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.3.0.192/27",
            "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/GatewaySubnet",
            "ip_configurations": [
              "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworkGateways/Hub-ER-GW01/ipConfigurations/Hub-ER-GW01-PIP01-Config"
            ],
            "name": "GatewaySubnet",
            "resource_group_name": "Hub-Network-RG",
            "virtual_network_name": "Hub-VNet"
          },
          "depends_on": [
            "azurerm_resource_group.rgroup",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.3.0.64/26",
            "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-ExtWAF-Net01",
            "name": "Hub-ExtWAF-Net01",
            "network_security_group_id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-ExtWAF-NSG",
            "resource_group_name": "Hub-Network-RG",
            "virtual_network_name": "Hub-VNet"
          },
          "depends_on": [
            "azurerm_resource_group.rgroup",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.3.0.128/26",
            "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-IntWAF-Net01",
            "name": "Hub-IntWAF-Net01",
            "network_security_group_id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-IntWAF-NSG",
            "resource_group_name": "Hub-Network-RG",
            "virtual_network_name": "Hub-VNet"
          },
          "depends_on": [
            "azurerm_resource_group.rgroup",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.3.1.0/28",
            "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-Net01",
            "name": "Hub-Net01",
            "network_security_group_id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-Net01-NSG",
            "resource_group_name": "Hub-Network-RG",
            "virtual_network_name": "Hub-VNet"
          },
          "depends_on": [
            "azurerm_resource_group.rgroup",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.Hub-ExtWAF-NSG",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgAssociation",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-ExtWAF-Net01",
            "network_security_group_id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-ExtWAF-NSG",
            "subnet_id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-ExtWAF-Net01"
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.Hub-Net01-NSG",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgAssociation",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-Net01",
            "network_security_group_id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-Net01-NSG",
            "subnet_id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-Net01"
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.Hub-IntWAF-NSG",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgAssociation",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-IntWAF-Net01",
            "network_security_group_id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-IntWAF-NSG",
            "subnet_id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-IntWAF-Net01"
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.Prod-Hub",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.3.0.0/22"
            ],
            "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet",
            "location": "southeastasia",
            "name": "Hub-VNet",
            "resource_group_name": "Hub-Network-RG",
            "subnet": [
              {
                "address_prefix": "10.3.0.0/26",
                "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.3.0.128/26",
                "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-IntWAF-Net01",
                "name": "Hub-IntWAF-Net01",
                "security_group": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-IntWAF-NSG"
              },
              {
                "address_prefix": "10.3.0.192/27",
                "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.3.0.224/27",
                "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "10.3.0.64/26",
                "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-ExtWAF-Net01",
                "name": "Hub-ExtWAF-Net01",
                "security_group": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-ExtWAF-NSG"
              },
              {
                "address_prefix": "10.3.1.0/28",
                "id": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-Net01",
                "name": "Hub-Net01",
                "security_group": "/subscriptions/13ef02a6-7352-4c93-834e-b739a3a65a0b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-Net01-NSG"
              }
            ]
          },
          "depends_on": [
            "azurerm_resource_group.rgroup"
          ]
        }
      ]
    }
  ]
}